fix issue with h1 alignment

--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -21,6 +21,8 @@ html, body {
 header.pageheader {
   h1 {
     font-size: $base-font-size * 2.25;
+    text-align: center;
+    margin-bottom: 2.25em;
   }
 }
 
